--- a/ooresults/templates/si/si2_data.html
+++ b/ooresults/templates/si/si2_data.html
@@ -27,6 +27,28 @@ $code
         elif status == 'cardInserted':
             return '<p style="color:green;">Reading card</p>'
 
+    def missing(status: str, missing_controls) -> str:
+        if status == ResultStatus.OK:
+            if missing_controls:
+                if len(missing_controls) == 1:
+                    return '1 control'
+                else:
+                    return str(len(missing_controls)) + ' controls'
+        else:
+            if missing_controls:
+                if 'FINISH' in missing_controls:
+                    return 'Finish time'
+                elif 'START' in missing_controls:
+                    return 'Start time'
+                elif len(missing_controls) == 1:
+                    return missing_controls[0]
+                elif len(missing_controls) == 2:
+                    return missing_controls[0] + ', ' + missing_controls[1]
+                elif len(missing_controls) == 3:
+                    return missing_controls[0] + ', ' + missing_controls[1] + ', ' + missing_controls[2]
+                elif len(missing_controls) >= 4:
+                    return str(len(missing_controls)) + ' controls'
+
 
 <div id="cls.event">
     <table style="text-align: left">
@@ -53,6 +75,7 @@ $code
                 <th class="dt">Time</th>
                 <th class="dt">Name</th>
                 <th class="dt">Class</th>
+                <th class="dt">Missing controls</th>
             </tr>
         </thead>
         <tbody>
@@ -66,8 +89,9 @@ $code
                     $if result.get('status') in (ResultStatus.OK, ResultStatus.MISSING_PUNCH, ResultStatus.DID_NOT_FINISH, ResultStatus.OVER_TIME):
                         <td class="dt">$result.get('lastName', ''), $result.get('firstName', '')</td>
                         <td class="dt">$result.get('class', '')</td>
+                        <td class="dt">$missing(result.get('status'), result.get('missingControls', []))</td>
                     $else:
-                        <td class="dt" colspan="2">$result.get('error', '')</td>
+                        <td class="dt" colspan="3">$result.get('error', '')</td>
                 </tr>
         </tbody>
     </table>
