Fixed error in formatting negative time differences

--- a/ooresults/templates/add_class.html
+++ b/ooresults/templates/add_class.html
@@ -3,7 +3,7 @@ $def with (class_, courses)
 
 $def format_time(time):
     $if time is not None:
-        $return '{:d}:{:02d}'.format(time//60, time%60)
+        $return minutes_seconds(time)
     $else:
         $return ''
 
