--- a/ooresults/templates/entries_table.html
+++ b/ooresults/templates/entries_table.html
@@ -11,7 +11,7 @@ $def format_year(year) -> str:
 
 $def format_time(time):
     $if time is not None:
-        $return '{:d}:{:02d}'.format(time//60, time%60)
+        $return minutes_seconds(time)
     $else:
         $return ''
 
