--- a/ooresults/templates/classes_tab_content.html
+++ b/ooresults/templates/classes_tab_content.html
@@ -4,7 +4,7 @@ $def with (classes_table)
 <div id="Classes" class="tabcontent">
   <div class="actions">
     <!-- Trigger/Open The Modal -->
-    <button id="cls.myBtnReload" onclick="cls_myReload()">Reload</button>
+    <button id="cls.myBtnReload" onclick="cls_update()">Reload</button>
     <button id="cls.myBtnImport" onclick="cls_myImport()">Import ...</button>
     <button id="cls.myBtnExport" onclick="cls_myExport()">Export ...</button>
     <button id="cls.myBtnAdd" onclick="cls_myAdd()">Add class ...</button>
@@ -102,26 +102,6 @@ $def with (classes_table)
             document.getElementById('cls.myBtnEdit').disabled = false;
             document.getElementById('cls.myBtnDelete').disabled = false;
         }
-    }
-
-    function cls_myReload() {
-        var data = new FormData();
-        data.append('event_id', window.event_id);
-        var xhr = new XMLHttpRequest();
-        xhr.onreadystatechange = function() {
-            if (this.readyState == 4 && this.status == 200) {
-                entr_updateTable(this.responseText)
-            }
-            if (this.readyState == 4 && this.status == 409) {
-                window.alert(this.responseText);
-            }
-            if (this.readyState == 4 && this.status == 500) {
-                window.alert(this.responseText);
-            }
-        };
-        xhr.open("POST", "class/update", true);
-        xhr.responseType = "html";
-        xhr.send(data);
     }
 
     function cls_myImport() {
