--- a/ooresults/templates/clubs_tab_content.html
+++ b/ooresults/templates/clubs_tab_content.html
@@ -4,7 +4,7 @@ $def with (clubs_table)
 <div id="Clubs" class="tabcontent">
   <div class="actions">
     <!-- Trigger/Open The Modal -->
-    <button id="clb.myBtnReload" onclick="clb_myReload()">Reload</button>
+    <button id="clb.myBtnReload" onclick="clb_update()">Reload</button>
     <button id="clb.myBtnAdd" onclick="clb_myAdd()">Add club ...</button>
     <button id="clb.myBtnEdit" disabled onclick="clb_myEdit()">Edit club ...</button>
     <button id="clb.myBtnDelete" disabled onclick="clb_myDelete()">Delete club</button>
@@ -45,26 +45,6 @@ $def with (clubs_table)
             document.getElementById('clb.myBtnEdit').disabled = false;
             document.getElementById('clb.myBtnDelete').disabled = false;
         }
-    }
-
-    function clb_myReload() {
-        var data = new FormData();
-        data.append('event_id', window.event_id);
-        var xhr = new XMLHttpRequest();
-        xhr.onreadystatechange = function() {
-            if (this.readyState == 4 && this.status == 200) {
-                entr_updateTable(this.responseText)
-            }
-            if (this.readyState == 4 && this.status == 409) {
-                window.alert(this.responseText);
-            }
-            if (this.readyState == 4 && this.status == 500) {
-                window.alert(this.responseText);
-            }
-        };
-        xhr.open("POST", "club/update", true);
-        xhr.responseType = "html";
-        xhr.send(data);
     }
 
     function clb_myAdd() {
