--- a/ooresults/templates/entries_tab_content.html
+++ b/ooresults/templates/entries_tab_content.html
@@ -4,7 +4,7 @@ $def with (entries_table)
 <div id="Entries" class="tabcontent">
   <div class="actions">
     <!-- Trigger/Open The Modal -->
-    <button id="entr.myBtnReload" onclick="entr_myReload()">Reload</button>
+    <button id="entr.myBtnReload" onclick="entr_update()">Reload</button>
     <button id="entr.myBtnImport" onclick="entr_myImport()">Import ...</button>
     <button id="entr.myBtnExport" onclick="entr_myExport()">Export ...</button>
     <button id="entr.myBtnAdd" onclick="entr_myAdd()">Add entry ...</button>
@@ -198,26 +198,6 @@ $def with (entries_table)
             ln = entr_selected.querySelector('[id="entr_table_lastname"]').innerHTML == '';
             document.getElementById('entr.myBtnEdit').disabled = ln;
         }
-    }
-
-    function entr_myReload() {
-        var data = new FormData();
-        data.append('event_id', window.event_id);
-        var xhr = new XMLHttpRequest();
-        xhr.onreadystatechange = function() {
-            if (this.readyState == 4 && this.status == 200) {
-                entr_updateTable(this.responseText)
-            }
-            if (this.readyState == 4 && this.status == 409) {
-                window.alert(this.responseText);
-            }
-            if (this.readyState == 4 && this.status == 500) {
-                window.alert(this.responseText);
-            }
-        };
-        xhr.open("POST", "entry/update", true);
-        xhr.responseType = "html";
-        xhr.send(data);
     }
 
     function entr_myImport() {
