--- a/ooresults/templates/events_tab_content.html
+++ b/ooresults/templates/events_tab_content.html
@@ -4,7 +4,7 @@ $def with (events_table)
 <div id="Events" class="tabcontent">
   <div class="actions">
     <!-- Trigger/Open The Modal -->
-    <button id="evnt.myBtnReload" onclick="evnt_myReload()">Reload</button>
+    <button id="evnt.myBtnReload" onclick="evnt_update()">Reload</button>
     <button id="evnt.myBtnAdd" onclick="evnt_myAdd()">Add event ...</button>
     <button id="evnt.myBtnEdit" disabled onclick="evnt_myEdit()">Edit event ...</button>
     <button id="evnt.myBtnDelete" disabled onclick="evnt_myDelete()">Delete event</button>
@@ -59,26 +59,6 @@ $def with (events_table)
             element = document.getElementById('evnt.event_date');
             element.innerHTML = evnt_selected.getElementsByTagName('TD')[1].innerHTML;
         }
-    }
-
-    function evnt_myReload() {
-        var data = new FormData();
-        data.append('event_id', window.event_id);
-        var xhr = new XMLHttpRequest();
-        xhr.onreadystatechange = function() {
-            if (this.readyState == 4 && this.status == 200) {
-                entr_updateTable(this.responseText)
-            }
-            if (this.readyState == 4 && this.status == 409) {
-                window.alert(this.responseText);
-            }
-            if (this.readyState == 4 && this.status == 500) {
-                window.alert(this.responseText);
-            }
-        };
-        xhr.open("POST", "event/update", true);
-        xhr.responseType = "html";
-        xhr.send(data);
     }
 
     function evnt_myAdd() {
