--- a/ooresults/templates/results_tab_content.html
+++ b/ooresults/templates/results_tab_content.html
@@ -4,7 +4,7 @@ $def with (results)
 <div id="Results" class="tabcontent">
   <div class="actions">
     <!-- Trigger/Open The Modal -->
-    <button id="res.myBtnReload" onclick="res_myReload()">Reload</button>
+    <button id="res.myBtnReload" onclick="res_update()">Reload</button>
     <button id="res.myBtnPdfResult" onclick="res_myPdfResult()">Print results ...</button>
     <button id="res.myBtnPdfSplittimes" onclick="res_myPdfSplittimes()">Print splittimes ...</button>
   </div>
@@ -50,26 +50,6 @@ $def with (results)
 </div>
 
 <script>
-    function res_myReload() {
-        var data = new FormData();
-        data.append('event_id', window.event_id);
-        var xhr = new XMLHttpRequest();
-        xhr.onreadystatechange = function() {
-            if (this.readyState == 4 && this.status == 200) {
-                entr_updateTable(this.responseText)
-            }
-            if (this.readyState == 4 && this.status == 409) {
-                window.alert(this.responseText);
-            }
-            if (this.readyState == 4 && this.status == 500) {
-                window.alert(this.responseText);
-            }
-        };
-        xhr.open("POST", "result/update", true);
-        xhr.responseType = "html";
-        xhr.send(data);
-    }
-
     function res_myPdfResult() {
         document.getElementById('res.pdfResultDialog').style.display='block';
     }
