--- a/ooresults/templates/series_tab_content.html
+++ b/ooresults/templates/series_tab_content.html
@@ -4,7 +4,7 @@ $def with (results)
 <div id="Series" class="tabcontent">
   <div class="actions">
     <!-- Trigger/Open The Modal -->
-    <button id="ser.myBtnReload" onclick="ser_myReload()">Reload</button>
+    <button id="ser.myBtnReload" onclick="ser_update()">Reload</button>
     <button id="ser.myBtnSettings" onclick="ser_mySettings()">Settings ...</button>
     <button id="ser.myBtnPdfResult" onclick="ser_myPdfResult()">Print results ...</button>
     <button id="ser.myBtnCsvResult" onclick="ser_myCsvResult()">CSV results ...</button>
@@ -54,26 +54,6 @@ $def with (results)
 </div>
 
 <script>
-    function ser_myReload() {
-        var data = new FormData();
-        data.append('event_id', window.event_id);
-        var xhr = new XMLHttpRequest();
-        xhr.onreadystatechange = function() {
-            if (this.readyState == 4 && this.status == 200) {
-                entr_updateTable(this.responseText)
-            }
-            if (this.readyState == 4 && this.status == 409) {
-                window.alert(this.responseText);
-            }
-            if (this.readyState == 4 && this.status == 500) {
-                window.alert(this.responseText);
-            }
-        };
-        xhr.open("POST", "series/update", true);
-        xhr.responseType = "html";
-        xhr.send(data);
-    }
-
     function ser_mySettings() {
         var xhr = new XMLHttpRequest();
         xhr.onreadystatechange = function() {
