--- a/ooresults/templates/si/si2_data.html
+++ b/ooresults/templates/si/si2_data.html
@@ -83,7 +83,7 @@ $code
             $if event.get('id', -1) == result.get('eventId', '-2'):
                 <tr class="dt" style="background-color: $color(result.get('status'))">
                     <td class="dt">$result.get('entryTime', '')</td>
-                    <td class="dt" style="text-align:right">$result.get('controlCard')</td>
+                    <td class="dt" style="text-align:right">$format_card(result.get('controlCard'))</td>
                     <td class="dt">$MAP_STATUS[result.get('status')]</td>
                     <td class="dt" style="text-align:right">$format(result.get('time', 0))</td>
                     $if result.get('status') in (ResultStatus.OK, ResultStatus.MISSING_PUNCH, ResultStatus.DID_NOT_FINISH, ResultStatus.OVER_TIME):
