--- a/ooresults/templates/classes_tab_content.html
+++ b/ooresults/templates/classes_tab_content.html
@@ -275,6 +275,8 @@ $def with (classes_table)
             }
             if (this.readyState == 4 && this.status == 409) {
                 window.alert(this.responseText);
+                evnt_update();
+                openTab(event, 'Events');
             }
             if (this.readyState == 4 && this.status == 500) {
                 window.alert(this.responseText);
