--- a/ooresults/templates/classes_table.html
+++ b/ooresults/templates/classes_table.html
@@ -1,6 +1,5 @@
 $def with (event, classes)
 
-$ date = event.get('date', '')
 
 $def format_time(time):
     $if time is not None:
@@ -28,11 +27,11 @@ $def format_voided_legs(legs):
     <table style="text-align: left">
         <tr>
             <th style="padding-right: 10px">Event name:</th>
-            <td>$event.get('name', '')</td>
+            <td>$(event.name if event is not None else '')</td>
         </tr>
         <tr>
             <th style="padding-right: 10px">Event date:</th>
-            <td>$(date.isoformat() if date != '' else '')</td>
+            <td>$(event.date.isoformat() if event is not None else '')</td>
         </tr>
     </table>
 </div>
