--- a/ooresults/templates/entries_tab_content.html
+++ b/ooresults/templates/entries_tab_content.html
@@ -429,6 +429,8 @@ $def with (entries_table)
             }
             if (this.readyState == 4 && this.status == 409) {
                 window.alert(this.responseText);
+                evnt_update();
+                openTab(event, 'Events');
             }
             if (this.readyState == 4 && this.status == 500) {
                 window.alert(this.responseText);
