--- a/ooresults/templates/entries_table.html
+++ b/ooresults/templates/entries_table.html
@@ -1,7 +1,5 @@
 $def with (event, competitors)
 
-$ date = event.get('date', '')
-
 
 $def format_year(year) -> str:
     $if year is not None:
@@ -26,11 +24,11 @@ $def format_date(time):
     <table style="text-align: left">
         <tr>
             <th style="padding-right: 10px">Event name:</th>
-            <td>$event.get('name', '')</td>
+            <td>$(event.name if event is not None else '')</td>
         </tr>
         <tr>
             <th style="padding-right: 10px">Event date:</th>
-            <td>$(date.isoformat() if date != '' else '')</td>
+            <td>$(event.date.isoformat() if event is not None else '')</td>
         </tr>
     </table>
 </div>
@@ -52,9 +50,9 @@ $def format_date(time):
                 <th class="dt">Club</th>
                 <th class="dt">Class</th>
                 <th class="dt">&nbsp;&nbsp;NC&nbsp;&nbsp;</th>
-                $if event:
-                    $for i in range(len(event.fields)):
-                        <th class="dt">$event.fields[i]</th>
+                $if event is not None:
+                    $for field in event.fields:
+                        <th class="dt">$field</th>
                 <th class="dt">Start</th>
                 <th class="dt">Time</th>
                 <th class="dt">Status</th>
@@ -71,7 +69,7 @@ $def format_date(time):
                 <td class="dt">$competitor.get('club', '')</td>
                 <td class="dt">$competitor.get('class_', '')</td>
                 <td class="dt" style="text-align: center;">$('X' if competitor.get('not_competing', False) else '')</td>
-                $if event:
+                $if event is not None:
                     $for i in range(len(event.fields)):
                         <td class="dt">$competitor.fields.get(i, '')</td>
                 <td class="dt" style="text-align:right">$(format_date(competitor.start.start_time))</td>
