--- a/ooresults/templates/results_table.html
+++ b/ooresults/templates/results_table.html
@@ -1,7 +1,5 @@
 $def with (event, class_results, columns)
 
-$ date = event.get('date', '')
-
 
 $def format_rank(rank, not_competing: bool) -> str:
     $if rank is not None:
@@ -57,11 +55,11 @@ $def voided_legs(ranked_results):
     <table style="text-align: left">
         <tr>
             <th style="padding-right: 10px">Event name:</th>
-            <td>$event.get('name', '')</td>
+            <td>$(event.name if event is not None else '')</td>
         </tr>
         <tr>
             <th style="padding-right: 10px">Event date:</th>
-            <td>$(date.isoformat() if date != '' else '')</td>
+            <td>$(event.date.isoformat() if event is not None else '')</td>
         </tr>
     </table>
 </div>
